--- a/src/libs/DependencyPropertyGenerator.Attributes/DependencyPropertyGenerator.Attributes.csproj
+++ b/src/libs/DependencyPropertyGenerator.Attributes/DependencyPropertyGenerator.Attributes.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.0;net4.5.1</TargetFrameworks>
+        <TargetFrameworks>net8.0</TargetFrameworks>
         <IsPackable>false</IsPackable>
         <Nullable>disable</Nullable>
         <ImplicitUsings>disable</ImplicitUsings>
