--- a/src/libs/DependencyPropertyGenerator/DependencyPropertyGenerator.csproj
+++ b/src/libs/DependencyPropertyGenerator/DependencyPropertyGenerator.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.0</TargetFrameworks><!-- ;net6.0;net7.0;net8.0 -->
+        <TargetFrameworks>net8.0</TargetFrameworks><!-- ;net6.0;net7.0;net8.0 -->
         <NoWarn>$(NoWarn);CA1014;CA1308;CA1031;CA1307</NoWarn>
         <IsRoslynComponent>true</IsRoslynComponent>
         <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
@@ -26,50 +26,17 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="H.Generators.Extensions" PrivateAssets="all" />
+	    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" PrivateAssets="all" />
     </ItemGroup>
-
-    <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" PrivateAssets="all" />
-    </ItemGroup>
-
-    <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" PrivateAssets="all" VersionOverride="4.6.0" />
-    </ItemGroup>
-
-    <ItemGroup Condition=" '$(TargetFramework)' == 'net7.0' ">
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" PrivateAssets="all" VersionOverride="4.7.0" />
-    </ItemGroup>
-
-    <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" PrivateAssets="all" VersionOverride="4.8.0" />
-    </ItemGroup>
-    
+   
     <ItemGroup Label="Attributes">
         <EmbeddedResource Include="../$(AssemblyName).Attributes/*.cs" Visible="false" />
         <AdditionalFiles Include="../$(AssemblyName).Attributes/*.cs" Visible="false" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference
-            Include="..\DependencyPropertyGenerator.Attributes\DependencyPropertyGenerator.Attributes.csproj"
-            PrivateAssets="all" />
-    </ItemGroup>
-
-    <ItemGroup Condition=" '$(TargetFramework)' == '' ">
-        <None Include="$(AssemblyName).props" Pack="true" PackagePath="build" />
-        <None Include="$(OutputPath)\netstandard2.0\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/roslyn4.3.1/cs" Visible="false" />
-        <None Include="$(OutputPath)\netstandard2.0\$(AssemblyName).Attributes.dll" Pack="true" PackagePath="analyzers/dotnet/roslyn4.3.1/cs" Visible="false" />
-        <None Include="$(OutputPath)\netstandard2.0\H.Generators.Extensions.dll" Pack="true" PackagePath="analyzers/dotnet/roslyn4.3.1/cs" Visible="false" />
-<!--        <None Include="$(OutputPath)\net6.0\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/roslyn4.6.0/cs" Visible="false" />-->
-<!--        <None Include="$(OutputPath)\net6.0\$(AssemblyName).Attributes.dll" Pack="true" PackagePath="analyzers/dotnet/roslyn4.6.0/cs" Visible="false" />-->
-<!--        <None Include="$(OutputPath)\net6.0\H.Generators.Extensions.dll" Pack="true" PackagePath="analyzers/dotnet/roslyn4.6.0/cs" Visible="false" />-->
-<!--        <None Include="$(OutputPath)\net7.0\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/roslyn4.7.0/cs" Visible="false" />-->
-<!--        <None Include="$(OutputPath)\net7.0\$(AssemblyName).Attributes.dll" Pack="true" PackagePath="analyzers/dotnet/roslyn4.7.0/cs" Visible="false" />-->
-<!--        <None Include="$(OutputPath)\net7.0\H.Generators.Extensions.dll" Pack="true" PackagePath="analyzers/dotnet/roslyn4.7.0/cs" Visible="false" />-->
-<!--        <None Include="$(OutputPath)\net8.0\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/roslyn4.8.0/cs" Visible="false" />-->
-<!--        <None Include="$(OutputPath)\net8.0\$(AssemblyName).Attributes.dll" Pack="true" PackagePath="analyzers/dotnet/roslyn4.8.0/cs" Visible="false" />-->
-<!--        <None Include="$(OutputPath)\net8.0\H.Generators.Extensions.dll" Pack="true" PackagePath="analyzers/dotnet/roslyn4.8.0/cs" Visible="false" />-->
+        <ProjectReference Include="..\DependencyPropertyGenerator.Attributes\DependencyPropertyGenerator.Attributes.csproj" PrivateAssets="all" />
+        <ProjectReference Include="..\H.Generators.Extensions\H.Generators.Extensions.csproj" />
     </ItemGroup>
 
 </Project>
