--- a/src/libs/DependencyPropertyGenerator/DependencyPropertyGenerator.csproj
+++ b/src/libs/DependencyPropertyGenerator/DependencyPropertyGenerator.csproj
@@ -15,7 +15,7 @@
 		<NoWarn>$(NoWarn);NU5128;CA1724</NoWarn>
 		<GeneratePackageOnBuild Condition=" '$(Configuration)' == 'Release' ">true</GeneratePackageOnBuild>
 		<ExcludeRestorePackageImports>false</ExcludeRestorePackageImports>
-		<Version>1.0.6</Version>
+		<Version>1.0.7</Version>
 
 		<DevelopmentDependency>true</DevelopmentDependency>
 		<IncludeBuildOutput>false</IncludeBuildOutput>
@@ -27,6 +27,16 @@
 		<PackageId>WPF.DependencyPropertyGenerator</PackageId>
 		<Authors>rozputnii</Authors>
 		<PackageIcon>nuget_icon.png</PackageIcon>
+		<PackageProjectUrl>https://github.com/rozputnii/WPF.DependencyPropertyGenerator</PackageProjectUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0|AnyCPU'">
+	  <IsTrimmable>True</IsTrimmable>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0|AnyCPU'">
+	  <IsTrimmable>True</IsTrimmable>
 	</PropertyGroup>
 
 	<ItemGroup Label="Attributes">
@@ -39,6 +49,10 @@
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
+		<None Include="..\..\..\README.md">
+		  <Pack>True</Pack>
+		  <PackagePath>\</PackagePath>
+		</None>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -50,13 +64,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\DependencyPropertyGenerator.Attributes\DependencyPropertyGenerator.Attributes.csproj"
-		                  PrivateAssets="all" />
+		<ProjectReference Include="..\DependencyPropertyGenerator.Attributes\DependencyPropertyGenerator.Attributes.csproj" PrivateAssets="all" />
 		<ProjectReference Include="..\H.Generators.Extensions\H.Generators.Extensions.csproj" PrivateAssets="all" />
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == '' ">
-		<None Include="$(AssemblyName).props" Pack="true" PackagePath="build" />
+		<None Include="WPF.$(AssemblyName).props" Pack="true" PackagePath="build" />
 		<None Include="$(OutputPath)\net8.0\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/roslyn4.8.0/cs" Visible="false" />
 		<None Include="$(OutputPath)\net8.0\$(AssemblyName).Attributes.dll" Pack="true" PackagePath="analyzers/dotnet/roslyn4.8.0/cs" Visible="false" />
 		<None Include="$(OutputPath)\net8.0\H.Generators.Extensions.dll" Pack="true" PackagePath="analyzers/dotnet/roslyn4.8.0/cs" Visible="false" />
